[project]
name = "entre_nous"
version = "0.1.0"
description = "Application de messagerie simple et sécurisée pour la communication entre utilisateurs d'un même réseau local"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["flet==0.25.0"]
authors = [
    { name = "Yuma Kitenge Victoire", email = "yumakitenge2@gmail.com" },
    { name = "Lutamba Lula Pascal" },
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.entrenous"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Entre Nous"

# company name to display in about app dialogs
company = "Entre Nous"

# module-name = "main"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Victoire Kitenge & Pascal Lutamba"


# [tool.flet.app]
# path = "src"
# # # module = "main"
